[gd_scene load_steps=18 format=3 uid="uid://c6rrtvyw3vr26"]

[ext_resource type="PackedScene" uid="uid://b4sydku5qhq6l" path="res://scenes/ray_picker_camera.tscn" id="1_b8csa"]
[ext_resource type="MeshLibrary" uid="uid://m3alxb5mb5c4" path="res://MeshLibraries/SpaceLibrary.tres" id="1_hsj2n"]
[ext_resource type="PackedScene" uid="uid://dcv0jxwe8uxnu" path="res://scenes/enemy.tscn" id="2_qd3o1"]
[ext_resource type="PackedScene" uid="uid://bnek8573gnq1x" path="res://scenes/base.tscn" id="3_1uhv6"]
[ext_resource type="Script" path="res://scripts/enemy_path_3d.gd" id="3_qtkth"]
[ext_resource type="Script" path="res://scripts/turret_manager.gd" id="5_kg6dv"]
[ext_resource type="PackedScene" uid="uid://b4gvf04r7d8bx" path="res://scenes/turret.tscn" id="6_tbijb"]
[ext_resource type="Script" path="res://scripts/bank.gd" id="8_ompyu"]
[ext_resource type="PackedScene" uid="uid://cn8qergfy0mmt" path="res://scenes/difficulty_manager.tscn" id="9_lrg76"]
[ext_resource type="PackedScene" uid="uid://blf7ksbofh0df" path="res://scenes/user_interface.tscn" id="10_m77po"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_p1u2k"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_popng"]
sky_material = SubResource("ProceduralSkyMaterial_p1u2k")

[sub_resource type="Environment" id="Environment_54cqp"]
background_mode = 2
sky = SubResource("Sky_popng")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pwq88"]
albedo_color = Color(0.560784, 0.6, 0.0156863, 1)

[sub_resource type="Curve3D" id="Curve3D_0t7fp"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -29.7872, -0.140697, 6.22109, -0.38096, 4.57764e-05, 0.788171, 0.38096, -4.57764e-05, -0.788171, 14.0775, -0.137619, 6.08511, 0.7131, -0.0158157, 0.356926, -0.7131, 0.0158157, -0.356926, 13.9415, 0.0515175, -2.27766, 0.619975, 0.0530968, 1.02928, -0.619975, -0.0530968, -1.02928, -13.8465, 0.0515137, -2.22444, 0, 0, 0, 0, 0, 0, -13.7965, 0.0515137, -6.12346),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_553r0"]
albedo_color = Color(0.392157, 0.392157, 0.392157, 1)

[sub_resource type="LabelSettings" id="LabelSettings_q3m4m"]
font_size = 52
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[node name="BaseLevel" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0428276, 1.90735e-06, -0.0222912)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_54cqp")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 9.00412, 0)
shadow_enabled = true

[node name="Floor" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
size = Vector3(100, 2, 100)
material = SubResource("StandardMaterial3D_pwq88")

[node name="RayPickerCamera" parent="." node_paths=PackedStringArray("gridmap", "turret_manager") instance=ExtResource("1_b8csa")]
gridmap = NodePath("../GridMap")
turret_manager = NodePath("../TurretManager")

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("1_hsj2n")
cell_size = Vector3(4, 4, 4)
cell_center_y = false
data = {
"cells": PackedInt32Array(65535, 65534, 0, 65535, 2, 0, 4, 65535, 0, 65530, 65535, 655362, 65530, 65534, 3, 65531, 65534, 0, 65531, 2, 0, 65532, 2, 0, 65533, 65534, 0, 65533, 2, 1048578, 65534, 65534, 0, 65534, 2, 0, 0, 65534, 0, 0, 2, 0, 1, 65534, 0, 1, 2, 0, 2, 65534, 0, 2, 2, 0, 3, 65534, 0, 3, 2, 0, 4, 65534, 1441795, 4, 0, 0, 4, 1, 1441794, 4, 2, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 2, 1, 0, 0, 2, 0, 0, 65530, 2, 3, 65531, 65535, 1441795, 65530, 0, 655363, 65528, 65532, 1048578, 65528, 65533, 1048578, 65528, 65534, 1048578, 65528, 65535, 1048578, 65528, 0, 1048578, 65529, 65532, 1048578, 65529, 65533, 1048578, 65529, 65534, 1048578, 65529, 65535, 1048578, 65529, 0, 1048578, 65530, 65531, 3, 65531, 65531, 3, 65532, 65531, 3, 65533, 65531, 3, 65534, 65531, 3, 65535, 65531, 3, 0, 65531, 3, 1, 65531, 3, 2, 65531, 3, 3, 65531, 3, 4, 65531, 3, 5, 65531, 3, 5, 65534, 3, 5, 65535, 3, 5, 0, 3, 5, 1, 1441795, 5, 2, 1441795, 6, 65534, 3, 6, 65535, 3, 6, 0, 3, 6, 1, 3, 6, 2, 3, 6, 3, 3, 5, 3, 3, 4, 3, 1048579, 3, 3, 1048579, 2, 3, 3, 1, 3, 3, 65531, 3, 1048579, 65530, 3, 3, 65532, 3, 1048579, 65533, 3, 3, 65534, 3, 1441795, 65535, 3, 1441795, 0, 3, 3, 5, 65533, 2, 4, 65533, 2, 3, 65533, 2, 2, 65533, 2, 1, 65533, 2, 0, 65533, 2, 65535, 65533, 2, 65534, 65533, 2, 65533, 65533, 2, 65532, 65533, 2, 6, 65532, 3, 6, 65533, 3, 65530, 65532, 3)
}

[node name="EnemyPath3D" type="Path3D" parent="." node_paths=PackedStringArray("difficulty_manager", "victory_layer")]
curve = SubResource("Curve3D_0t7fp")
script = ExtResource("3_qtkth")
enemy_scene = ExtResource("2_qd3o1")
difficulty_manager = NodePath("../DifficultyManager")
victory_layer = NodePath("../UserInterface")

[node name="Road" type="CSGPolygon3D" parent="EnemyPath3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
polygon = PackedVector2Array(-1, 0, -1, 0.1, 1, 0.1, 1, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.5
path_simplify_angle = 0.0
path_rotation = 2
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
material = SubResource("StandardMaterial3D_553r0")

[node name="RightEdge" type="CSGPolygon3D" parent="EnemyPath3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
polygon = PackedVector2Array(0.9, 0, 0.9, 0.15, 1.1, 0.15, 1.1, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.5
path_simplify_angle = 0.0
path_rotation = 2
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="LeftEdge" type="CSGPolygon3D" parent="EnemyPath3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
polygon = PackedVector2Array(-1.1, 0, -1.1, 0.15, -0.9, 0.15, -0.9, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.5
path_simplify_angle = 0.0
path_rotation = 2
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="EnemyTimer" type="Timer" parent="EnemyPath3D"]
unique_name_in_owner = true
wait_time = 2.0
autostart = true

[node name="Base" parent="." instance=ExtResource("3_1uhv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.91, 0, -6.123)
max_health = 50.0
max_health_color = Color(0.145098, 0.831373, 0.141176, 1)

[node name="TurretManager" type="Node3D" parent="." node_paths=PackedStringArray("enemy_path")]
script = ExtResource("5_kg6dv")
turret_scene = ExtResource("6_tbijb")
enemy_path = NodePath("../EnemyPath3D")

[node name="Bank" type="MarginContainer" parent="." groups=["bank"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("8_ompyu")

[node name="MoneyLabel" type="Label" parent="Bank"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Money: 32"
label_settings = SubResource("LabelSettings_q3m4m")

[node name="DifficultyManager" parent="." instance=ExtResource("9_lrg76")]

[node name="UserInterface" parent="." instance=ExtResource("10_m77po")]

[connection signal="timeout" from="EnemyPath3D/EnemyTimer" to="EnemyPath3D" method="spawn_enemy"]
[connection signal="stop_spawning_enemies" from="DifficultyManager" to="EnemyPath3D" method="_on_difficulty_manager_stop_spawning_enemies"]
